--- a/lib/messengyr/web/templates/page/login.html.eex
+++ b/lib/messengyr/web/templates/page/login.html.eex
@@ -2,11 +2,10 @@
 
   <h1>Log in to Messenger</h1>
 
-  <form>
-    <input placeholder="Username">
-    <input placeholder="Password">
-
-    <button type="submit" class="login">Log in</button>
-  </form>
+  <%= form_for @conn, page_path(@conn, :login_user), [as: :credentials], fn f -> %>
+  <%= text_input f, :username, placeholder: "Username" %>
+  <%= text_input f, :password, placeholder: "Password", type: "password" %>
+  <%= submit "Log in", class: "login" %>
+  <% end %>
 
 </div>
