--- a/lib/messengyr/web/templates/chat/index.html.eex
+++ b/lib/messengyr/web/templates/chat/index.html.eex
@@ -2,4 +2,8 @@
 
 <div id="app"></div>
 
+<script>
+ window.jwtToken = "<%= jwt(@conn) %>";
+</script>
+
 <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
